--- a/ReHouse.Utils/packages.config
+++ b/ReHouse.Utils/packages.config
@@ -2,6 +2,9 @@
 <packages>
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="ImageResizer" version="4.0.5" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Razor" version="3.0.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net45" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="RazorEngine" version="3.9.3" targetFramework="net45" />
 </packages>
