--- a/ReHouse.FrontEnd/ReHouse.FrontEnd.csproj
+++ b/ReHouse.FrontEnd/ReHouse.FrontEnd.csproj
@@ -229,6 +229,7 @@
     <Compile Include="App_Start\Startup.cs" />
     <Compile Include="Areas\Cabinet\CabinetAreaRegistration.cs" />
     <Compile Include="Areas\Cabinet\Controllers\BaseCabinetController.cs" />
+    <Compile Include="Areas\Cabinet\Controllers\TextsController.cs" />
     <Compile Include="Areas\Cabinet\Controllers\SeoParametrsController.cs" />
     <Compile Include="Areas\Cabinet\Controllers\FeedbacksController.cs" />
     <Compile Include="Areas\Cabinet\Controllers\BuildersController.cs" />
@@ -537,6 +538,9 @@
     <Content Include="Areas\Cabinet\Views\SeoParametrs\Edit.cshtml" />
     <Content Include="Areas\Cabinet\Views\SeoParametrs\List.cshtml" />
     <Content Include="Areas\Cabinet\Views\Shared\SeoParametrs\_listOfSeoParams.cshtml" />
+    <Content Include="Areas\Cabinet\Views\Texts\Edit.cshtml" />
+    <Content Include="Areas\Cabinet\Views\Texts\List.cshtml" />
+    <Content Include="Areas\Cabinet\Views\Shared\Texts\_listOfTexts.cshtml" />
     <None Include="Properties\PublishProfiles\wanted.pubxml" />
     <None Include="Scripts\_references.js" />
     <Content Include="Views\Shared\NewB\_listOfNewBuildings.cshtml" />
