--- a/ReHouse.FrontEnd/Web.config
+++ b/ReHouse.FrontEnd/Web.config
@@ -49,6 +49,17 @@
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
     </modules>
     <validation validateIntegratedModeConfiguration="false" />
+    <rewrite>
+      <rules>
+        <rule name="www" stopProcessing="true">
+          <match url="^(.*)$" />
+          <conditions>
+            <add input="{HTTP_HOST}" pattern="^www\.rehouse-realty\.com\.ua$" />
+          </conditions>
+          <action type="Redirect" url="http://rehouse-realty.com.ua/{R:1}" redirectType="Permanent" />
+        </rule>
+      </rules>
+    </rewrite>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
