--- a/ReHouse.Utils/ReHouse.Utils.csproj
+++ b/ReHouse.Utils/ReHouse.Utils.csproj
@@ -308,6 +308,10 @@
     <Compile Include="Migrations\201707200646009_seoTags.Designer.cs">
       <DependentUpon>201707200646009_seoTags.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201707280628556_pageactive.cs" />
+    <Compile Include="Migrations\201707280628556_pageactive.Designer.cs">
+      <DependentUpon>201707280628556_pageactive.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -380,6 +384,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201707200646009_seoTags.resx">
       <DependentUpon>201707200646009_seoTags.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707280628556_pageactive.resx">
+      <DependentUpon>201707280628556_pageactive.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
