--- a/ReHouse.Utils/ReHouse.Utils.csproj
+++ b/ReHouse.Utils/ReHouse.Utils.csproj
@@ -320,6 +320,10 @@
     <Compile Include="Migrations\201710131802571_newupd.Designer.cs">
       <DependentUpon>201710131802571_newupd.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201710151741399_dates-patch.cs" />
+    <Compile Include="Migrations\201710151741399_dates-patch.Designer.cs">
+      <DependentUpon>201710151741399_dates-patch.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -401,6 +405,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201710131802571_newupd.resx">
       <DependentUpon>201710131802571_newupd.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201710151741399_dates-patch.resx">
+      <DependentUpon>201710151741399_dates-patch.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
